--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -14,9 +14,9 @@ background: '/img/posts/gethsemane.jpg'
 <p>Many disciples of Jesus have gone through great trials and afflictions for the God's sake. Examples of these disciples include: </p>
 
 <ul>
+    <img src="/img/posts/liberty.jpeg" height="600" width="200">
     <li>
 
-        <img src="/img/posts/liberty.jpeg">
         Joseph Smith
         During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
         D&C 121
@@ -25,8 +25,8 @@ background: '/img/posts/gethsemane.jpg'
         <q> 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;</q>
         <q> 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.</q>
     </li>
+    <img src="/img/posts/job.jpg" width="400" height="400">
     <li>
-        <img src="/img/posts/job.jpg" width="300" height="300">
         Job
         Job was cursed with afflictions so bad he wished he were never born. 
 
