--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -34,6 +34,7 @@ background: '/img/posts/gethsemane.jpg'
     <li>
     Peter
     </li>
+    <img src="/img/posts/gethsemane.jpg">
     <li>
     Jesus Christ
     In Psalm 22:1 David foretells Jesus saying, 
