--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -24,7 +24,7 @@ background: '/img/posts/gethsemane.jpg'
         <q> 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;</q>
         <q> 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.</q>
     </li>
-    <img src="/img/posts/liberty.jpeg" height="600" width="200">
+    <img src="/img/posts/liberty.jpeg" height="400" width="200">
     <li>
         Job
         Job was cursed with afflictions so bad he wished he were never born. 
@@ -32,7 +32,7 @@ background: '/img/posts/gethsemane.jpg'
     </li>
     <img src="/img/posts/job.jpg" width="400" height="400">
     <li>
-    Peter
+    Peter got thrown in jail for preaching the gospel after Christ's death.
     </li>
     <li>
         Jesus Christ
