--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -28,7 +28,10 @@ background: '/img/posts/gethsemane.jpg'
     <li>
         Job
         Job was cursed with afflictions so bad he wished he were never born. 
-        
+        Job 3:11 says
+
+        <q>11 Why adied I not from the womb? why did I not give up the ghost when I came out of the belly?</q>        
+
     </li>
     <img src="/img/posts/job.jpg" width="400" height="400">
     <li>
