--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -16,13 +16,17 @@ background: '/img/posts/gethsemane.jpg'
     It is a question every believer asks at some point during their lifetime. 
     There is so much suffering in the world. 
     There are examples of righteous people who suffered greatly, unrighteous people who suffered greatly. 
-    People who's suffering was a result of their own actions, and people who's suffering was a result of others actions, or just happened. 
+    People who's suffering was a result of their own actions, and people who's suffering was a result of others actions, 
+    or just happened regardless of anyone's decisions.
     Whatever the category, everyone experiences suffering to some degree in their lifetimes. 
 </p>
 
-    <h2>Righteous who suffer</h2>
+<h2>Righteous who suffer</h2>
 
-<p>Many disciples of Jesus have gone through great trials and afflictions for the God's sake. Examples of these disciples include: </p>
+<p>
+    Many disciples of Jesus have gone through great trials and afflictions for the God's sake. 
+    Examples of these disciples include: 
+</p>
 
 <ul>
     <li>
