--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -42,11 +42,13 @@ background: '/img/posts/gethsemane.jpg'
     <img src="/img/posts/liberty.jpeg" height="500" width="300">
     <li>
         Job
-        Job was cursed with afflictions so bad he wished he were never born. 
+        Job was cursed with afflictions so bad he asked why he was born.
         Job 3:11 says
 
         <q>11 Why adied I not from the womb? why did I not give up the ghost when I came out of the belly?</q>        
-
+        After Job endures his trials without ever blaming God, 
+        God comes to him and tells him we can't always understand why God does things.
+        Sometimes we just need to trust God without understanding why He gave us a certain burden or when it's going to be lifted.
     </li>
     <img src="/img/posts/job.jpg" width="400" height="400">
     <li>
