--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -55,9 +55,11 @@ background: '/img/posts/gethsemane.jpg'
         God comes to him and tells him we can't always understand why God does things.
         Sometimes we just need to trust God without understanding why He gave us a certain burden or when it's going to be lifted.
     </li>
+    <br>
     <li>
         Peter got thrown in jail for preaching the gospel after Christ's death.
     </li>
+    <br>
     <li>
         Jesus Christ
         <br>
@@ -76,8 +78,13 @@ background: '/img/posts/gethsemane.jpg'
         "11 And he shall go forth, suffering pains and afflictions and temptations of every kind; 
         and this that the word might be fulfilled which saith he will take upon him the pains and the sicknesses of his people."
         <br>
-        
+
+        Jesus Christ suffered the most anyone has ever suffered in the history of the world 
+        so no matter how bad we suffer it won't be as bad as Him. He asked God why He had to suffer and God told him He had to. 
+        The suffering Jesus went through was necessary for the plan of salvation to work so that men could be redeemed from their sinful state
+
     </li>
+    <br>
 
 </ul>
 
