--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -33,7 +33,7 @@ background: '/img/posts/gethsemane.jpg'
         
         Joseph Smith
         <br>
-        <img src="/img/posts/liberty.jpeg" height="500" width="350">
+        <img src="/img/posts/liberty.jpeg" height="500" width="400">
         <br>
         During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
         D&C 121
@@ -81,8 +81,7 @@ background: '/img/posts/gethsemane.jpg'
 
         Jesus Christ suffered the most anyone has ever suffered in the history of the world 
         so no matter how bad we suffer it won't be as bad as Him. He asked God why He had to suffer and God told him He had to. 
-        The suffering Jesus went through was necessary for the plan of salvation to work so that men could be redeemed from their sinful state
-
+        The suffering Jesus went through was necessary for the plan of salvation to work so that men could be redeemed from their sinful state.
     </li>
     <br>
 
