--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -57,7 +57,7 @@ background: '/img/posts/wise.jpg'
 
 
 
-
+<br>
 <script src="https://utteranc.es/client.js"
         repo="porterbmoody.github.io"
         issue-term="pathname"
@@ -65,3 +65,7 @@ background: '/img/posts/wise.jpg'
         crossorigin="anonymous"
         async>
 </script>
+
+
+<br>
+<p>swag awesomeness</p>
