--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -45,7 +45,7 @@ background: '/img/posts/gethsemane.jpg'
     <li>
         Job
         <br>
-        <img src="/img/posts/job.jpg" width="400" height="400">
+        <img src="/img/posts/job.jpg" width="450" height="400">
         <br>
         Job was cursed with afflictions so bad he asked why he was born.
         Job 3:11 says
@@ -63,7 +63,7 @@ background: '/img/posts/gethsemane.jpg'
     <li>
         Jesus Christ
         <br>
-        <img src="/img/posts/gethsemane.jpg">
+        <img src="/img/posts/gethsemane.jpg" width="400" height="200">
         <br>
         In Psalm 22:1 David foretells Jesus saying, 
         "1 My God, my God, why hast thou forsaken me? Why art thou so far from helping me, and from the words of my roaring?"
@@ -110,6 +110,7 @@ Elder Christofferson said,
 <q>The path of life cannot always be easy for any of us. There is too much refining needed for it to be easy. The process of God-directed purging and purifying will, of necessity, be wrenching and painful at times. 
 So, in the midst of this refiner’s fire, rather than get angry with God, get close to God. Call upon the Father in the name of the Son. Turn to Them for daily bread. Walk with Them by the Spirit, day by day and step by step. Come truly to know Them and to truly know yourself. Let God prevail. 
 No matter what our mortal experience may entail, we can trust God and find joy in Him.</q>
+<br>
 <br>
 
 Hank Smith and John Bytheway dove into this question during the Job episode of Come Follow Him. They quoted Victor Frankyl show said, 
