--- a/_posts/2022-12-19-Polygamy.html
+++ b/_posts/2022-12-19-Polygamy.html
@@ -2,8 +2,8 @@
 layout: post
 title: "Polygamy"
 subtitle: "One man married to multiple women"
-date: 2022-12-19 10:45:13 -0400
-background: '/img/posts/06.jpg'
+date: 2022-12-19
+background: '/img/posts/polygamy.jpg'
 ---
 
 # Polygamy
