--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -16,7 +16,7 @@ background: '/img/posts/wise.jpg'
     The wise men were actually called Magi which means mistics. 
 
     <h2>The Star</h2>
-    <img src="/img/posts/star.jpg" alt="awesome pic" align="left">
+    <img src="/img/posts/star.jpg" alt="awesome pic" align="left" padding="10px">
     <p style="float:right"> 
     Helaman 14:5 prophecies of the star being a sign of Jesus.
     <q>5 And behold, there shall a new star arise, such an one as ye never have beheld; and this also shall be a sign unto you.
