--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -33,7 +33,7 @@ background: '/img/posts/gethsemane.jpg'
         
         Joseph Smith
         <br>
-        <img src="/img/posts/liberty.jpeg" height="500" width="400">
+        <img src="/img/posts/liberty.jpeg" width="400">
         <br>
         During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
         D&C 121
@@ -45,7 +45,7 @@ background: '/img/posts/gethsemane.jpg'
     <li>
         Job
         <br>
-        <img src="/img/posts/job.jpg" width="450" height="400">
+        <img src="/img/posts/job.jpg" width="450">
         <br>
         Job was cursed with afflictions so bad he asked why he was born.
         Job 3:11 says
@@ -63,7 +63,7 @@ background: '/img/posts/gethsemane.jpg'
     <li>
         Jesus Christ
         <br>
-        <img src="/img/posts/gethsemane.jpg" width="400" height="200">
+        <img src="/img/posts/gethsemane.jpg" width="400">
         <br>
         In Psalm 22:1 David foretells Jesus saying, 
         "1 My God, my God, why hast thou forsaken me? Why art thou so far from helping me, and from the words of my roaring?"
@@ -115,10 +115,3 @@ No matter what our mortal experience may entail, we can trust God and find joy i
 
 Hank Smith and John Bytheway dove into this question during the Job episode of Come Follow Him. They quoted Victor Frankyl show said, 
     
-<!-- <script src="https://utteranc.es/client.js"
-        repo="porterbmoody.github.io"
-        issue-term="pathname"
-        theme="github-light"
-        crossorigin="anonymous"
-        async>
-</script> -->
