--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -15,18 +15,19 @@ background: '/img/posts/wise.jpg'
     and then returned to bear witness of the birth of Christ. 
     The wise men were actually called Magi which means mistics. 
 
-    <h2>The Star</h2>
     <img src="/img/posts/star.jpg" alt="awesome pic" align="left" padding="10px" width="300">
     <p style="float:right"> 
-    Helaman 14:5 prophecies of the star being a sign of Jesus.
-    <q>5 And behold, there shall a new star arise, such an one as ye never have beheld; and this also shall be a sign unto you.
-    </q>
-    Once the wise men saw the star they immediately recognized it and started their 7 week journey to Bethlehem. 
-    They initially arrived in Jerusalem and met King Herod. 
-    They then acquired of Herod where Jesus was born and King Herod told them to go to Bethlehem and once they see
-    Jesus to return and inform him so Herod could go a worship too. 
-    So the wise men traveled to Bethlehem and saw the star above the stable. </p>
-    
+        <h2>The Star</h2>
+        Helaman 14:5 prophecies of the star being a sign of Jesus.
+        <q>5 And behold, there shall a new star arise, such an one as ye never have beheld; and this also shall be a sign unto you.
+        </q>
+        Once the wise men saw the star they immediately recognized it and started their 7 week journey to Bethlehem. 
+        They initially arrived in Jerusalem and met King Herod. 
+        They then acquired of Herod where Jesus was born and King Herod told them to go to Bethlehem and once they see
+        Jesus to return and inform him so Herod could go a worship too. 
+        So the wise men traveled to Bethlehem and saw the star above the stable. 
+    </p>
+
     <br>
     Mathew 2:7
     <q>10 When they saw the star, they rejoiced with exceeding great joy.</q>
