--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -2,7 +2,7 @@
 layout: post
 title: "The 3 wise men"
 subtitle: "Who followed the star"
-date: 2022-12-23 23:45:13 -0400
+date: 2022-12-23 23:45:13
 background: '/img/posts/wise.jpg'
 ---
 
@@ -16,8 +16,8 @@ background: '/img/posts/wise.jpg'
     The wise men were actually called Magi which means mistics. 
     <br>
 
-    <img src="/img/posts/star.jpg" alt="awesome pic" align="left" padding="10px" width="300">
-    <p style="float:right"> 
+    <img src="/img/posts/star.jpg" alt="awesome pic" align="right" padding="10px" width="300">
+    <p style="float:left"> 
         <h2>The Star</h2>
         Helaman 14:5 prophecies of the star being a sign of Jesus.
         <q>5 And behold, there shall a new star arise, such an one as ye never have beheld; and this also shall be a sign unto you.
