--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -20,8 +20,11 @@ background: '/img/posts/wise.jpg'
     <p style="float:left"> 
         <h2>The Star</h2>
         Helaman 14:5 prophecies of the star being a sign of Jesus.
-        <q>5 And behold, there shall a new star arise, such an one as ye never have beheld; and this also shall be a sign unto you.
+        <br>
+        <q>
+            5 And behold, there shall a new star arise, such an one as ye never have beheld; and this also shall be a sign unto you.
         </q>
+        <br>
         Once the wise men saw the star they immediately recognized it and started their 7 week journey to Bethlehem. 
         They initially arrived in Jerusalem and met King Herod. 
         They then acquired of Herod where Jesus was born and King Herod told them to go to Bethlehem and once they see
