--- a/_posts/2022-12-21-is there no balm in gilead.html
+++ b/_posts/2022-12-21-is there no balm in gilead.html
@@ -19,13 +19,13 @@ An aromatic spice used for healing wounds that was made from a bush grown in gil
 Here's a map of the geographical location of Gilead.
 
 <center>
-<img src="../images/gilead_map.jpg" alt="Alt text" title="Olive Tree" style="display: inline-block; margin: 0 auto; max-width: 275px">
+<img src="/images/gilead_map.jpg" alt="Alt text" title="Olive Tree" style="display: inline-block; margin: 0 auto; max-width: 275px">
 </center>
 
 Here is also another picture of the bush used to create such the ointment refered to as the Balm in Gilead. These 
 
 <center>
-<img src="../images/gilead_bush.jpg" alt="Alt text" title="Olive Tree" style="display: inline-block; margin: 0 auto; max-width: 350px">
+<img src="/images/gilead_bush.jpg" alt="Alt text" title="Olive Tree" style="display: inline-block; margin: 0 auto; max-width: 350px">
 </center>
 
 
