--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -88,18 +88,22 @@ background: '/img/posts/gethsemane.jpg'
 </ul>
 
 
-<!-- - And many more... -->
-<!-- In many cases, the suffering of these individuals </p> -->
 <h2>Unrighteous who suffer</h2>
 <lu>
     <li>
-        Those who suffer because of their own sins.
+        Those who suffer because of their own sins. There are those who make sinful decisions and suffer the consequences. 
+        Korihor is an example of this. He preached unto the people that there would be no Christ and that there is no God. 
+        Alma testified that there is a God, but after Korihor ignored Alma, he was struck dumb. 
+        This was a direct consequence of a sin Korihor chose to do. 
     </li>
+    <img src="img/posts/alma.jpg">
+    <br>
     <li>
         
     </li>
 </lu>
 
+<br>
 <h2>Those who never knew God who suffer</h2>
 
 <br>
