--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -36,11 +36,13 @@ background: '/img/posts/gethsemane.jpg'
         <img src="/img/posts/liberty.jpeg" width="400">
         <br>
         During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
+        <blockquote>
         D&C 121
-        <q> 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?</q>
+        1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?
         And God responded.
-        <q> 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;</q>
-        <q> 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.</q>
+        7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;
+        8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.
+        </blockquote>
     </li>
     <li>
         Job
@@ -48,9 +50,10 @@ background: '/img/posts/gethsemane.jpg'
         <img src="/img/posts/job.jpg" width="450">
         <br>
         Job was cursed with afflictions so bad he asked why he was born.
-        Job 3:11 says
-        
-        <q>11 Why adied I not from the womb? why did I not give up the ghost when I came out of the belly?</q>        
+        <blockquote>
+        Job 3:11
+        Why adied I not from the womb? why did I not give up the ghost when I came out of the belly?
+        </blockquote>
         After Job endures his trials without ever blaming God, 
         God comes to him and tells him we can't always understand why God does things.
         Sometimes we just need to trust God without understanding why He gave us a certain burden or when it's going to be lifted.
