--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,11 @@
 layout: page
 title: Contact Me
 description: YOOO hit me up if you wanna chat...
-background: '/img/snake.jpg'
+background: '/img/me.jpg'
 form: true
 ---
-
-<p>YOOOOO Fill out this form and I'll respond within 20 minutes!!</p>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<p>I'm always looking for feedback or insights you have to offer. Input your email address and I'll get back soon.</p>
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
@@ -15,20 +15,20 @@ form: true
       <p class="help-block text-danger"></p>
     </div>
   </div>
-  <!-- <div class="control-group">
+  <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Email Address</label>
       <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
       <p class="help-block text-danger"></p>
     </div>
-  </div> -->
-  <div class="control-group">
+  </div>
+  <!-- <div class="control-group">
     <div class="form-group col-xs-12 floating-label-form-group controls">
       <label>Phone Number</label>
       <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Enter your phone number.">
       <p class="help-block text-danger"></p>
     </div>
-  </div>
+  </div> -->
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Message</label>
