--- a/_posts/2022-12-28-He comprehendeth all things.html
+++ b/_posts/2022-12-28-He comprehendeth all things.html
@@ -1,7 +1,7 @@
 <!-- ---
 layout: post
-title: "If God really loves us so much, why does he allow so much suffering?"
-subtitle: "O God, Where art thou?"
+title: "He comprehendeth all things?"
+subtitle: "What does that mean and how is it useful to know?"
 date: 2022-12-22 23:45:13 -0400
 background: '/img/posts/gethsemane.jpg'
 ---
