--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -6,7 +6,7 @@ date: 2022-12-22 23:45:13 -0400
 background: '/img/posts/gethsemane.jpg'
 ---
 
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <p>
     It's a big question and can't be fully answered with a simple one liner or one size fits all solution. 
     We're gonna take a stab at answering this question. 
