--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ background: '/img/shrek.png'
 ---
 
 
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- <center><img src="../images/myself.jpg" alt="Alt text" title="Olive Tree" style="display: inline-block; margin: 0 auto; max-width: 200px"></center> -->
 
