--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -5,6 +5,8 @@ subtitle: "O God, Where art thou?"
 date: 2022-12-22 23:45:13 -0400
 background: '/img/posts/gethsemane.jpg'
 ---
+<!DOCTYPE html>
+<html lang="en">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <p>
@@ -122,3 +124,5 @@ No matter what our mortal experience may entail, we can trust God and find joy i
 
 Hank Smith and John Bytheway dove into this question during the Job episode of Come Follow Him. They quoted Victor Frankyl show said, 
     
+
+</html>
