--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -38,14 +38,16 @@ background: '/img/posts/gethsemane.jpg'
         <img src="/img/posts/liberty.jpeg" width="400">
         <br>
         During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
-        <blockquote>
-        D&C 121
-        1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?
-        And God responded.
-        7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;
-        8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.
+        <br>
+        <blockquote cite="https://www.huxley.net/bnw/four.html">
+            D&C 121
+            1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?
+            And God responded.
+            7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;
+            8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.
         </blockquote>
     </li>
+    <br>
     <li>
         Job
         <br>
