--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -35,7 +35,7 @@ background: '/img/posts/gethsemane.jpg'
         
         Joseph Smith
         <br>
-        <img src="/img/posts/liberty.jpeg" width="400">
+        <img src="/img/posts/liberty.jpeg" width="400" class="responsive">
         <br>
         During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
         <br>
@@ -51,7 +51,7 @@ background: '/img/posts/gethsemane.jpg'
     <li>
         Job
         <br>
-        <img src="/img/posts/job.jpg" width="450">
+        <img src="/img/posts/job.jpg" width="450" class="responsive">
         <br>
         Job was cursed with afflictions so bad he asked why he was born.
         <blockquote>
@@ -70,7 +70,7 @@ background: '/img/posts/gethsemane.jpg'
     <li>
         Jesus Christ
         <br>
-        <img src="/img/posts/gethsemane.jpg" width="400">
+        <img src="/img/posts/gethsemane.jpg" width="400" class="responsive">
         <br>
         In Psalm 22:1 David foretells Jesus saying, 
         "1 My God, my God, why hast thou forsaken me? Why art thou so far from helping me, and from the words of my roaring?"
@@ -103,7 +103,7 @@ background: '/img/posts/gethsemane.jpg'
         Alma testified that there is a God, but after Korihor ignored Alma, he was struck dumb. 
         This was a direct consequence of a sin Korihor chose to do. 
     </li>
-    <img src="img/posts/alma.jpg">
+    <img src="img/posts/alma.jpeg" class="responsive">
     <br>
     <li>
         
