--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -56,7 +56,7 @@ background: '/img/posts/gethsemane.jpg'
         Job was cursed with afflictions so bad he asked why he was born.
         <blockquote>
         Job 3:11
-        Why adied I not from the womb? why did I not give up the ghost when I came out of the belly?
+        Why died I not from the womb? why did I not give up the ghost when I came out of the belly?
         </blockquote>
         After Job endures his trials without ever blaming God, 
         God comes to him and tells him we can't always understand why God does things.
