--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -91,6 +91,7 @@ background: '/img/posts/gethsemane.jpg'
         The suffering Jesus went through was necessary for the plan of salvation to work so that men could be redeemed from their sinful state.
     </li>
     <br>
+    The fact is there are many more righteous saints who have suffered for the sake of their discipleship. 
 
 </ul>
 
