--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -43,7 +43,9 @@ background: '/img/posts/gethsemane.jpg'
             D&C 121
             1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?
             And God responded.
+            <br>
             7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;
+            <br>
             8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.
         </blockquote>
     </li>
@@ -73,10 +75,14 @@ background: '/img/posts/gethsemane.jpg'
         <img src="/img/posts/gethsemane.jpg" width="400" class="responsive">
         <br>
         <br>
-        In Psalm 22:1 David foretells Jesus saying, 
-        "1 My God, my God, why hast thou forsaken me? Why art thou so far from helping me, and from the words of my roaring?"
-        And Matthew 27:46 says, "46 And about the ninth hour Jesus cried with a loud voice, saying, Eli, Eli, lama sabachthani?
-        that is to say, My God, my God, why hast thou forsaken me?" During the crucifixion of Jesus Christ. 
+        <blockquote>
+            <p>
+                In Psalm 22:1 David foretells Jesus saying, 
+                "1 My God, my God, why hast thou forsaken me? Why art thou so far from helping me, and from the words of my roaring?"
+                And Matthew 27:46 says, "46 And about the ninth hour Jesus cried with a loud voice, saying, Eli, Eli, lama sabachthani?
+                that is to say, My God, my God, why hast thou forsaken me?" During the crucifixion of Jesus Christ. 
+            </p>
+        </blockquote>
         <br>
         
         During His suffering in gethsemane we have the following verse 
